WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
13242
REGRESSION: Repro crash when specifying the content property for an image
https://bugs.webkit.org/show_bug.cgi?id=13242
Summary
REGRESSION: Repro crash when specifying the content property for an image
mitz
Reported
2007-03-31 03:29:48 PDT
The URL crashes TOT. Backtrace: #0 0x015df328 in WebCore::StringImpl::length (this=0xffff1340) at StringImpl.h:72 #1 0x0121bf5c in WebCore::String::isEmpty (this=0x69566d8) at WebCore/platform/String.cpp:381 #2 0x011b62c4 in WebCore::RenderImage::setImageSizeForAltText (this=0x695666c, newImage=0x0) at WebCore/rendering/RenderImage.cpp:95 #3 0x013590cc in WebCore::HTMLImageElement::attach (this=0x694e3d0) at WebCore/html/HTMLImageElement.cpp:187
Attachments
Fix the crash
(3.43 KB, patch)
2007-03-31 04:07 PDT
,
mitz
darin
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
mitz
Comment 1
2007-03-31 04:07:12 PDT
Created
attachment 13905
[details]
Fix the crash
Darin Adler
Comment 2
2007-03-31 16:23:44 PDT
Comment on
attachment 13905
[details]
Fix the crash r=me
Andrew Wellington
Comment 3
2007-03-31 22:16:40 PDT
Landed in
r20644
Mark Rowe (bdash)
Comment 4
2007-03-31 22:22:26 PDT
<
rdar://problem/5103235
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug