2007-03-31  Mitz Pettel  <mitz@webkit.org>

Reviewed by Darin.

        - test for http://bugs.webkit.org/show_bug.cgi?id=13242
          REGRESSION: Repro crash when specifying the content property for an image

        * fast/images/text-content-crash-expected.txt: Added.
        * fast/images/text-content-crash.html: Added.

2007-03-31  Mitz Pettel  <mitz@webkit.org>

        Reviewed by Darin.

        - fix http://bugs.webkit.org/show_bug.cgi?id=13242
          REGRESSION: Repro crash when specifying the content property for an image

        Test: fast/images/text-content-crash.html

        * html/HTMLImageElement.cpp:
        (WebCore::HTMLImageElement::parseMappedAttribute): Added a check that the
        renderer is an image.
        (WebCore::HTMLImageElement::attach): Ditto.



Canonical link: https://commits.webkit.org/17323@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@20644 268f45cc-cd09-0410-ab3c-d52691b4dbfc