WebCore/html/HTMLImageElement.cpp
@@ -89,7 +89,7 @@ void HTMLImageElement::parseMappedAttribute(MappedAttribute* attr)
 {
     const QualifiedName& attrName = attr->name();
     if (attrName == altAttr) {
-        if (renderer())
+        if (renderer() && renderer()->isImage())
             static_cast<RenderImage*>(renderer())->updateAltText();
     } else if (attrName == srcAttr)
         m_imageLoader.updateFromElement();
@@ -177,7 +177,7 @@ void HTMLImageElement::attach()
 {
     HTMLElement::attach();
 
-    if (renderer()) {
+    if (renderer() && renderer()->isImage()) {
         RenderImage* imageObj = static_cast<RenderImage*>(renderer());
         imageObj->setCachedImage(m_imageLoader.image());
         
